<resources>
    <string name="app_name">CanteenApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_my_account">My Account</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_play_store">Play Store</string>
    <string name="menu_share">Share</string>
    <string name="menu_apply_leave">Apply Leave</string>
    <string name="menu_send">Send</string>

    <string name="getidtoken">1040092779697-oucm7581052rptnm8sioemfa3rj5q5m0.apps.googleusercontent.com</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_mealtime">Meal Time</string>
    <string name="menu_changemenu">Change Menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
