<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.canteenapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_account"
        android:name="com.example.canteenapp.ui.myaccount.MyAccountFragment"
        android:label="@string/menu_my_account"
        tools:layout="@layout/fragment_my_account" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.canteenapp.ui.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/nav_apply_leave"
        android:name="com.example.canteenapp.ui.applyleave.ApplyLeaveFragment"
        android:label= "@string/menu_apply_leave"
        tools:layout="@layout/fragment_apply_leave" />
</navigation>