<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mess_navigation"
    app:startDestination="@+id/nav_home_mess">

    <fragment
        android:id="@+id/nav_home_mess"
        android:name="com.example.canteenapp.ui.mess.home.MessHomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_mess_home" />

    <fragment
        android:id="@+id/nav_update"
        android:name="com.example.canteenapp.ui.mess.updatemenu.UpdateMenu"
        android:label="@string/menu_changemenu"
        tools:layout="@layout/update_menu_fragment" />

    <fragment
        android:id="@+id/nav_mealtime"
        android:name="com.example.canteenapp.ui.mess.mealtime.MealTime"
        android:label="@string/menu_mealtime"
        tools:layout="@layout/meal_time_fragment" />
    <fragment
        android:id="@+id/nav_mess_feedback"
        android:name="com.example.canteenapp.ui.mess.feedback.Feedback"
        android:label="Feedback"
        tools:layout="@layout/feedback_fragment" />
</navigation>