<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_mess"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/menu_changemenu"/>
        <item
            android:id="@+id/nav_mealtime"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/menu_mealtime"/>
        <item
            android:id="@+id/nav_mess_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="Feedback"/>
    </group>


<!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="@string/menu_share" />-->
<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_send" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>
